--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "init-hardhat-playground",
+  "name": "solidity-playground",
   "description": "EVM script by Hardhat",
   "version": "1.0.0",
   "scripts": {
@@ -16,6 +16,7 @@
     "script": "npx hardhat run scripts/main.ts --network "
   },
   "dependencies": {
+    "@chainlink/contracts": "0.4.1",
     "@openzeppelin/contracts": "4.4.2",
     "@openzeppelin/contracts-upgradeable": "4.4.2",
     "dotenv": "11.0.0"
@@ -35,7 +36,6 @@
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
-    "ethereum-waffle": "3.4.0",
     "ethers": "5.5.3",
     "hardhat": "2.9.3",
     "hardhat-gas-reporter": "1.0.8",
@@ -45,10 +45,5 @@
     "ts-node": "10.4.0",
     "tsconfig-paths": "3.11.0",
     "typescript": "4.4.4"
-  },
-  "resolutions": {
-    "ansi-regex": "3.0.1",
-    "async": "2.6.4",
-    "minimist": "1.2.6"
   }
 }
